--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -9,20 +9,20 @@
 
             <div class="flex">
                 <p>
-                    <label>First name: <input type="text" name="name" required/></label>
+                    <label>First name: <input class="squares_bg" type="text" name="name" required/></label>
                 </p>
 
                 <p>
-                    <label>Last name: <input type="text" name="name" required/></label>
+                    <label>Last name: <input class="squares_bg" type="text" name="name" required/></label>
                 </p>
             </div>
 
             <p>
-                <label>Email: <input type="email" name="email" required/></label>
+                <label>Email: <input class="squares_bg" type="email" name="email" required/></label>
             </p>
 
             <p>
-                <label>Message: <textarea name="message" required></textarea></label>
+                <label>Message: <textarea class="squares_bg" name="message" required></textarea></label>
             </p>
 
             <p>
