--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,6 +28,7 @@ import { FOOTER_DESCRIPTION, STREET, POSTAL_CODE, TEL } from "../consts";
             <a href="/sectors/"><span></span>Sectors</a>
             <a href="/locations/"><span></span>Location</a>
             <a href="/about/"><span></span>About</a>
+            <a href="/FAQ/"><span></span>FAQ</a>
             <a href="/contact/"><span></span>Contact</a>
             <a href="/privacy-policy/"><span></span>Privacy Policy</a>
         </nav>
