--- a/src/pages/sectors/[...slug].astro
+++ b/src/pages/sectors/[...slug].astro
@@ -57,7 +57,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
     <section class="intro">
         <BackBt url={`/sectors/#${(sector.data.title).toLowerCase().replace(/\s+/g, '-')}`} label="Other sectors"/>
 
-        <div class="cover">
+        <div class="cover squares_bg">
 			<img src={sector.data.image} alt={sector.data.description} class="reveal_delay" loading="lazy"/>
         </div>
     
@@ -78,7 +78,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
             <span class="tangent_content_heading">Other Sectors</span>
 
             <ul class="posts">
-                <li id={(filteredSector[firstRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top reveal_delay2">
+                <li id={(filteredSector[firstRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top squares_bg reveal_delay2">
                     <div class="ctnr">
                         <div class="content">
                             <div class="ctnr">
@@ -100,7 +100,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
                     </div>
                 </li>
 
-                <li id={(filteredSector[secondRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top reveal_delay2">
+                <li id={(filteredSector[secondRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top squares_bg reveal_delay2">
                     <div class="ctnr">
                         <div class="content">
                             <div class="ctnr">
@@ -122,7 +122,7 @@ while (filteredSector[firstRandomPos].data.title == sectorTitle || filteredSecto
                     </div>
                 </li>
 
-                <li id={(filteredSector[thirdRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top reveal_delay2">
+                <li id={(filteredSector[thirdRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top squares_bg reveal_delay2">
                     <div class="ctnr">
                         <div class="content">
                             <div class="ctnr">
