--- a/src/pages/sectors/index.astro
+++ b/src/pages/sectors/index.astro
@@ -35,7 +35,7 @@ import { SITE_KEYWORDS, SECTORS_TITLE, SECTORS_DESCRIPTION, SECTORS_KEYWORDS, SE
 <BaseLayout title={SECTORS_TITLE} description={SECTORS_DESCRIPTION} keywords={SECTORS_KEYWORDS ? SECTORS_KEYWORDS : SITE_KEYWORDS}>
     <main>
         <div class="ctnr">
-            <div class="heading_ctnr default_bg">
+            <div class="heading_ctnr squares_bg">
                 <div class="content reveal">
                     <h1 set:html={SECTORS_H1}></h1>
 
