--- a/src/pages/services/[...slug].astro
+++ b/src/pages/services/[...slug].astro
@@ -59,7 +59,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
     <section class="intro">
         <BackBt url={`/services/#${(service.data.title).toLowerCase().replace(/\s+/g, '-')}`} label="Other services"/>
 
-        <div class="cover">
+        <div class="cover squares_bg">
 			<img src={service.data.image} alt={service.data.description} class="reveal_delay" loading="lazy" draggable="false"/>
         </div>
 
@@ -84,7 +84,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
             <span class="tangent_content_heading">Other Services</span>
 
             <ul class="posts">
-                <li id={(filteredServices[firstRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top reveal_delay2">
+                <li id={(filteredServices[firstRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top squares_bg reveal_delay2">
                     <div class="ctnr">
                         <div class="content">
                             <div class="ctnr">
@@ -106,7 +106,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                     </div>
                 </li>
 
-                <li id={(filteredServices[secondRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top reveal_delay2">
+                <li id={(filteredServices[secondRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top squares_bg reveal_delay2">
                     <div class="ctnr">
                         <div class="content">
                             <div class="ctnr">
@@ -128,7 +128,7 @@ while (filteredServices[firstRandomPos].data.title == serviceTitle || filteredSe
                     </div>
                 </li>
 
-                <li id={(filteredServices[thirdRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top reveal_delay2">
+                <li id={(filteredServices[thirdRandomPos].data.title).toLowerCase().replace(/\s+/g, '-')} class="scroll_margin_top squares_bg reveal_delay2">
                     <div class="ctnr">
                         <div class="content">
                             <div class="ctnr">
