--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -12,7 +12,7 @@ import { LOCATIONS_TITLE, LOCATIONS_DESCRIPTION, LOCATIONS_KEYWORDS, LOCATIONS_H
 
 <BaseLayout title={LOCATIONS_TITLE} description={LOCATIONS_DESCRIPTION} keywords={LOCATIONS_KEYWORDS} >
     <main>
-        <div class="heading_ctnr default_bg">
+        <div class="heading_ctnr squares_bg">
             <div class="content reveal">
                 <h1 set:html={LOCATIONS_H1}></h1>
 
