--- a/src/styles/collections.css
+++ b/src/styles/collections.css
@@ -1,7 +1,8 @@
 .panel {
     border: 0.2rem solid var(--light-a);
     border-radius: 1.2rem;
-    background-image: linear-gradient(-30deg,var(--light-a),transparent 62%);
+    background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Camada_1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 25.5 25.5'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:none;stroke:%23fff;stroke-miterlimit:10;%7D%3C/style%3E%3C/defs%3E%3Cpolyline class='cls-1' points='25 0 25 25 0 25'/%3E%3C/svg%3E"), linear-gradient(-30deg,var(--light-a),transparent 62%);
+    background-size: 2rem, cover;
 }
 
 .panel .content {
@@ -68,7 +69,7 @@ h2 {
 
 @media screen and (min-width:850px) {
     .panel {
-        background-image: linear-gradient(175deg,var(--light-a),transparent 15%);
+        background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg id='Camada_1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 25.5 25.5'%3E%3Cdefs%3E%3Cstyle%3E.cls-1%7Bfill:none;stroke:%23fff;stroke-miterlimit:10;%7D%3C/style%3E%3C/defs%3E%3Cpolyline class='cls-1' points='25 0 25 25 0 25'/%3E%3C/svg%3E"), linear-gradient(175deg,var(--light-a),transparent 15%);
     }
 
     .panel .image picture {
