--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -80,6 +80,11 @@
         width: 100%;
         min-width: 100%;
         max-width: 100%;
+        font-family: inherit;
+    }
+
+    input.squares_bg, textarea.squares_bg, select.squares_bg {
+        background-size: 1.5rem;
     }
 
     textarea {
