--- a/src/styles/posts.css
+++ b/src/styles/posts.css
@@ -14,9 +14,9 @@
     width: 100%;
     height: clamp(5rem,115vmin,62rem);
     max-height: 80vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    /* background-position: center; */
+    /* background-repeat: no-repeat; */
+    /* background-size: cover; */
     /* background-attachment: fixed; */
     background-color: var(--light-d);
     /* box-shadow: inset 0 -16rem 10rem -16rem var(--primary-b); */
