--- a/src/styles/subpages.css
+++ b/src/styles/subpages.css
@@ -168,19 +168,21 @@ h2::after {
 
 .heading_ctnr {
     padding: clamp(2rem, 8vw, 5rem) 0;
-    background-color: var(--light-a);
-}
-
-.heading_ctnr h1 {
-    font-size: clamp(1rem, 8.5vmin, 5.5rem);
-    margin-bottom: 1rem;
-    color: var(--primary-a);
-    /* max-width: 105rem; */
-    margin-inline: auto;
+    background-color: var(--light-d);
 }
 
 .heading_ctnr .content {
     width: var(--base-width);
+    margin-inline: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.heading_ctnr h1 {
+    font-size: clamp(1rem, 8.5vmin, 5.5rem);
+    color: var(--primary-a);
+    /* max-width: 105rem; */
     margin-inline: auto;
 }
 
