--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -36,7 +36,7 @@
             <>
             <li class={expanded == "true" ? "expanded" : null}>
                 <div class="question squares_bg" role="button">
-                    <p set:html={questions.data.question}></p>
+                    <p set:html={questions.data.title}></p>
 
                     <div class="icon">
                         <div class="minus"></div>
