--- a/src/pages/FAQ/index.astro
+++ b/src/pages/FAQ/index.astro
@@ -11,7 +11,7 @@ import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS} from "../../consts";
 
 
 <BaseLayout title="Frequently Asked Questions · Clean Network" description={SITE_DESCRIPTION}  keywords={SITE_KEYWORDS}>
-    <main>
+    <main class="faq_main">
         <div class="heading_ctnr squares_bg">
             <div class="content reveal">
                 <h1>Frequently Asked Questions</h1>
