--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,7 +1,4 @@
-main {
-}
-
-main > .ctnr {
+.faq_main > .ctnr {
     width: clamp(9rem, 86vw, 90rem);
     margin-inline: auto;
     padding-block: clamp(2rem, 9vw, 6rem);
@@ -10,7 +7,7 @@ main > .ctnr {
 .faq_list {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: clamp(2rem, 3vw, 3.5rem);
 }
 
 .faq_list li {
@@ -27,15 +24,15 @@ main > .ctnr {
 
 .faq_list .question {
     color: var(--grey-a);
-    font-size: clamp(1rem, 4.7vw, 2rem);
-    font-weight: 550;
+    font-size: clamp(1rem, 4.7vw, 1.9rem);
+    font-weight: 500;
     background-color: var(--light-d);
     border-radius: 1rem;
     -webkit-border-radius: 1rem;
     -moz-border-radius: 1rem;
     -ms-border-radius: 1rem;
     -o-border-radius: 1rem;
-    background-size: 1.5rem;
+    background-size: clamp(1.2rem, 2vw, 1.5rem);
     padding-block: clamp(1rem, 3vw, 1.6rem);
     box-sizing: border-box;
     display: flex;
@@ -78,6 +75,15 @@ main > .ctnr {
     -o-border-radius: 0.4rem;
     border: 0.2rem solid var(--light-a);
     position: relative;
+    transition: background-color 0.1s ease;
+    -webkit-transition: background-color 0.1s ease;
+    -moz-transition: background-color 0.1s ease;
+    -ms-transition: background-color 0.1s ease;
+    -o-transition: background-color 0.1s ease;
+}
+
+.faq_list .question .icon:hover {
+    background-color: var(--light-a);
 }
 
 .faq_list .question .icon div {
@@ -87,11 +93,11 @@ main > .ctnr {
     height: 0.35rem;
     inset: 0;
     margin: auto;
-    border-radius: 0.1rem;
-    -webkit-border-radius: 0.1rem;
-    -moz-border-radius: 0.1rem;
-    -ms-border-radius: 0.1rem;
-    -o-border-radius: 0.1rem;
+    border-radius: 0.4rem;
+    -webkit-border-radius: 0.4rem;
+    -moz-border-radius: 0.4rem;
+    -ms-border-radius: 0.4rem;
+    -o-border-radius: 0.4rem;
 }
 
 .faq_list .question .icon .minus {
@@ -141,7 +147,7 @@ main > .ctnr {
     position: relative;
 }
 
-.faq_list .answer::after {
+/* .faq_list .answer::after {
     content: '';
     position: absolute;
     left: 1rem;
@@ -150,7 +156,7 @@ main > .ctnr {
     height: 2rem;
     background-image: linear-gradient(0deg, var(--light), transparent);
     z-index: 3;
-}
+} */
 
 .faq_list .answer p {
     padding-block: clamp(1rem, 2vw, 1.2rem) clamp(1rem, 4vw, 1.6rem);
