--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -345,6 +345,7 @@ picture img {
     border: 0.2rem solid var(--highlight);
     color: var(--light);
     font-weight: 500;
+    box-shadow: inset 0 -1.2rem 1.5rem -1.5rem, 0 0.8rem 1rem -0.6rem var(--light-b);
 }
 
 
