--- a/src/components/OurPeople.astro
+++ b/src/components/OurPeople.astro
@@ -20,6 +20,10 @@
                 <p>This philosophy is at the core of delivering the high-quality service that defines our reputation, and <b>we are enthusiastic about collaborating with clients who embrace these shared values</b>.</p>
             
                 <p>A substantial number of our team members have been integral to our organization for over five years. Among them, many have evolved into new roles and assumed additional responsibilities within the company. Proudly, some have ventured beyond our organization to pursue exciting opportunities, a testament to our commitment to <b>investing in their growth and progress</b>.</p>
+
+                <h4>Our Management Team</h4>
+                
+                <p>Our management Team Ben and Charlie have 15 years experience in the cleaning industry running The Clean Network.  Their key passion is ensuring clients receive great cleaning at an affordable price. </p>
             </div>
 
             <div class="bullets">
