--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -29,7 +29,7 @@ import { Schema } from "astro-seo-schema"
 	
 					<h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore similique nisi culpa, voluptatum possimus veritatis corrupti.</h2>
 
-					<a href="#posts" class="cta" aria-label="Check our posts">Check Posts</a>
+					<a href="#posts" class="cta light" aria-label="Check our posts">Check Posts</a>
 				</div>
 
 				<img src={posts[0].data.heroImage} class="reveal" alt="Hero blog image">
