--- a/src/styles/social-impact.css
+++ b/src/styles/social-impact.css
@@ -1,14 +1,17 @@
 section.social_impact {
-    padding-block: clamp(2rem, 8vw, 5rem) clamp(2rem, 16vw, 11rem);
+    padding-block: clamp(2rem, 8vw, 5rem);
     background-color: var(--highlight);
+    width: clamp(10rem, 96vw, 190rem);
+    margin-inline: auto;
+    border-radius: 2rem;
 }
 
 section.social_impact > .ctnr {
     width: var(--base-width);
     margin-inline: auto;
     color: var(--dark);
-    padding: clamp(3rem, 9vw, 6rem) clamp(2rem, 4vw, 5rem);
-    margin-top: calc(clamp(3rem, 15vw, 9rem) * -1.3);
+    padding: clamp(3rem, 9vw, 6rem);
+    margin-block: calc(clamp(3rem, 15vw, 9rem) * -1.3);
     box-sizing: border-box;
     text-align: center;
     background-color: var(--light-d);
