--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import { getCollection } from "astro:content";
 // const sectors = await getCollection("sectors");
 const testimonials = await getCollection("testimonials");
 
-import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS, SITE_H1, INTRO_H2, TEXT_BLOCK, SERVICES_SECTION_DESCRIPTION, SECTORS_SECTION_DESCRIPTION, LOCATIONS_SECTION_DESCRIPTION, FULL_ADDRESS, TEL, TEL_HREF } from "../consts";
+import { SITE_TITLE, SITE_DESCRIPTION, SITE_KEYWORDS, SITE_H1, INTRO_H2, TEXT_BLOCK, SERVICES_SECTION_DESCRIPTION, SECTORS_SECTION_DESCRIPTION, LOCATIONS_SECTION_DESCRIPTION, FULL_ADDRESS, TEL, TEL_HREF, TEL_INTERNATIONAL } from "../consts";
 
 const benefits = (await getCollection('benefits')).sort((a, b) => {
     // Check if both items have an 'order' property
@@ -58,7 +58,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 						</div>
 					
 						<div class="flex column">
-							<a href={`tel:${TEL_HREF}`} aria-label="Call us"><span>London: </span>{TEL}</a>
+							<a href={`tel:${TEL_HREF}`} aria-label={`Call us at ${TEL_INTERNATIONAL}`}><span>London: </span>{TEL}</a>
 					
 							<!-- <a href="tel:+44-0121-3927529"><span>Birmingham:</span> 0121 3927529</a> -->
 						</div>
