--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -162,6 +162,7 @@ import { TEL, TEL_HREF } from "../consts";
         font-size: 1.2rem;
         position: relative;
         z-index: 1;
+        text-shadow: -0.1rem 0.1rem var(--dark);
     }
 
     .stripe a:hover {
