--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 						</div>
 					
 						<div class="flex column">
-							<a href={`tel:${TEL_HREF}`} aria-label={`Call us at ${TEL_INTERNATIONAL}`}><span>London: </span>{TEL}</a>
+							<a href={`tel:${TEL_HREF}`} aria-label={`London: Call us at ${TEL_INTERNATIONAL}`}><span>London: </span>{TEL}</a>
 					
 							<!-- <a href="tel:+44-0121-3927529"><span>Birmingham:</span> 0121 3927529</a> -->
 						</div>
@@ -79,9 +79,9 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 
 		<section class="benefits scroll_margin_top" id="why-the-clean-network">
 			<div class="ctnr">
-				<h3>Why The Clean Network</h3>
+				<h3>Why the Clean Network</h3>
 
-				<p>{benefits.length} reasons to choose <b>The Clean Network</b> cleaning services:</p>
+				<p>{benefits.length} reasons to choose the <b>Clean Network</b> cleaning services:</p>
 
 				<div class="bullets">
 					{
