--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const benefits = (await getCollection('benefits')).sort((a, b) => {
 						</div>
 					
 						<div class="flex column">
-							<a href={`tel:${TEL_HREF}`} aria-label={`London: Call us at ${TEL_INTERNATIONAL}`}><span>London: </span>{TEL}</a>
+							<a href={`tel:${TEL_HREF}`} aria-label={`Call London office at ${TEL_INTERNATIONAL}`}><span>London: </span>{TEL}</a>
 					
 							<!-- <a href="tel:+44-0121-3927529"><span>Birmingham:</span> 0121 3927529</a> -->
 						</div>
