--- a/src/components/OurPolicies.astro
+++ b/src/components/OurPolicies.astro
@@ -13,18 +13,16 @@
                 <h4>Our Objectives:</h4>
     
                 <ul>
-                    <li><p>Understand and fulfill our customers' requirements and expectations, with continuous monitoring of service delivery.</p></li>
+                    <li><p>Understand and fulfill our customers' requirements and expectations, with <b>continuous monitoring of service delivery</b>.</p></li>
     
-                    <li><p>React and adapt to client requirements for maintaining and achieving quality standards.</p></li>
+                    <li><p>React and adapt to client requirements for <b>maintaining and achieving quality standards</b>.</p></li>
     
-                    <li><p>Provide the right environment and resources for our staff to deliver quality service and employ the right people for the job.</p></li>
+                    <li><p>Provide the right environment and resources for our staff to <b>deliver quality service</b> and <b>employ the right people for the job</b>.</p></li>
     
-                    <li><p>Regularly review, monitor, and measure our service to identify opportunities for continual improvement.</p></li>
-    
-                    <li><p>We believe that the 'can do' attitude of our staff is the foundation of the quality service we provide. Regular team reviews ensure flexibility in maintaining service quality and effectiveness of our Quality Policy.</p></li>
+                    <li><p>Regularly review, monitor, and measure our service to <b>identify opportunities for continual improvement</b>.</p></li>
                 </ul>
     
-                <p>We believe that the 'can do' attitude of our staff is the foundation of the quality service we provide. Regular team reviews ensure flexibility in maintaining service quality and effectiveness of our Quality Policy.</p>
+                <p>We believe that the 'can do' attitude of our staff is the foundation of the quality service we provide. Regular team reviews ensure flexibility in <b>maintaining service quality and effectiveness of our Quality Policy</b>.</p>
             </div>
 
             <div class="environmental_policy">
@@ -69,7 +67,7 @@
                         <p>Focus on training and monitoring daily cleaning operatives to minimize environmental impact.</p>
                     </div>
                 </div>
-                
+
                 <p>By working together as a team with a shared goal, we can contribute to environmental protection and continually seek opportunities for improvement.</p>
             </div>
         </div>
